# Hosptracker

./: .gitignore  .replit  Dockerfile  README.md  ads.txt  ai_monitor.py  app.py  interactive_extractor.py  main.py  models.py  package-lock.json  package.json  pdf_scraper.py  pdf_scraper_backup.py  pdf_scraper_old.py  pdf_scraper_old_with_debug.py  pdf_verify.py  pyproject.toml  replit.md  requirements.txt  routes.py  scheduler.py  table_extractor.py
attached_assets/: content-1748209477573.md
instance/: hospital_capacity.db
static/css/: style.css
static/js/: analytics.js  charts.js  dashboard.js  history-page.js
templates/: admin.html  analytics.html  base.html  clinics.html  history.html  index.html  pdf_debug.html  snapshot.html
