[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "camelot-py[cv]>=1.0.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.82.1",
    "pdfplumber>=0.11.6",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "tabula-py>=2.10.0",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
]
